--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,5 @@
 version: 0.0
 os: linux
 files:
-  - source: /target/RestWebService-0.0.1-SNAPSHOT.war
+  - source: /target/RestWebService.war
     destination: /usr/share/tomcat7/webapps/
